# readability

./: Cargo.toml  README.md
data/: img.html  rel.html
src/: dom.rs  error.rs  extractor.rs  lib.rs  scorer.rs
src/extractor/: blocking_client.rs  client.rs  mod.rs
tests/: async.rs  blocking.rs  lib.rs
