[package]
name = "readability"
version = "0.1.4"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []
edition = "2018"

[dependencies]
regex            = "1"
url              = "2.1"
html5ever        = "0.24"
lazy_static      = "1.4"

[dependencies.reqwest]
version = "0.10"
optional = true

[features]
default = ["reqwest"]
