[package]
name = "readability-fork"
version = "0.2.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/jangernert/readability"
repository = "https://github.com/jangernert/readability.git"
description = "Temporary fork of 'readability' crate with updated dependencies"
keywords = ["readability"]
categories = []
edition = "2018"

[dependencies]
regex            = "1"
url              = "2.1"
html5ever        = "0.24"
lazy_static      = "1.4"

[dependencies.reqwest]
version = "0.10"
optional = true

[features]
default = ["reqwest"]
