[package]
name = "readability"
version = "0.2.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.4"
url = "2.2"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
lazy_static = "1.4"

[dependencies.reqwest]
version = "0.11"
optional = true
features = ["blocking"]

[features]
default = ["reqwest"]
